--- a/package.json
+++ b/package.json
@@ -29,9 +29,7 @@
     "gulp-eslint": "^1.1.1",
     "gulp-mocha": "^2.2.0",
     "normalize-newline": "^1.0.2",
-    "publish-please": "^2.1.4",
-    "read-file-relative": "^1.2.0",
-    "testcafe": "^0.2.0-alpha"
+    "read-file-relative": "^1.2.0"
   },
   "dependencies": {
     "babel-runtime": "^5.3.0",
